Add ovop mission & vision

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -11,16 +11,15 @@ $this->pageBreadcrumbs()->setItems([
 <h1>Welcome</h1>
 
 <p>
-    This is the Role Demo application powered by Zend Framework 3. It is based on User Demo sample.
+    This is the user role of ovop project application powered by Zend Framework 3.
+    It is based on User RBAC, developed by Resolvo-dev.
     It demonstrates how to implement role-based access control.
 </p>
 
 <p>
-
-	Click the <em>Sign in</em> button at the top right. To sign in, use the
-    following credentials:
+	Click the <em>Sign in</em> button at the top right. To sign in, use the following credentials:
     <ul>
-        <li>Username: <em>admin@example.com</em></li>
-        <li>Password: <em>Secur1ty</em></li>
+        <li>Username: <em>admin@resolvo.com</em></li>
+        <li>Password: <em>Pass@Word001</em></li>
     </ul>
 </p>
