--- a/module/Application/view/application/index/settings.phtml
+++ b/module/Application/view/application/index/settings.phtml
@@ -15,19 +15,19 @@ $this->pageBreadcrumbs()->setItems([
     <div class="col-md-6">
         <table class="table table-striped table-bordered">
              <tr>
-                <th>ID:</th>
+                <th>ID</th>
                 <td><?= $this->escapeHtml($user->getId()) ?></td>
             </tr>
             <tr>
-                <th>E-mail:</th>
+                <th>E-mail</th>
                 <td><?= $this->escapeHtml($user->getEmail()) ?></td>
             </tr>
             <tr>
-                <th>Full Name:</th>
+                <th>Full Name</th>
                 <td><?= $this->escapeHtml($user->getFullName()) ?></td>
             </tr>
             <tr>
-                <th>Date Created:</th>
+                <th>Date Created</th>
                 <td><?= $this->escapeHtml($user->getDateCreated()) ?></td>
             </tr>
         </table>
