--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,10 +35,14 @@ div.container a.navbar-brand > img {
 }
 
 div.app-caption {
-    padding: 25px 0px;    
+    padding: 25px 0px;
     font-size:3.0em;
     font-weight: bold;
     color:#6aacaf
+}
+
+div.ovop-header {
+
 }
 
 form ul {
@@ -47,8 +51,8 @@ form ul {
   margin: 0px 5px;
 }
 
-form ul li {    
-  color: red;        
+form ul li {
+  color: red;
 }
 
 .alert ul {
