--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -28,42 +28,30 @@
         ?>
     </head>
     <body>
-        <div class="container">
-        	<div class="row">
-        		<!-- Page header -->
-        		<div class="col-md-12">
-        			<div class="ovop-header">
-        				<div class="row">
-        					<div class="col-md-2 text-center">
-        						<img alt="moc logo" src="<?= $this->basePath('/img/moc-logo.png'); ?>" style="size: 100%; height: 130px;">
-        					</div>
-        					<div class="col-md-8 text-center">
-        						<h2 style="font-family: 'Moul', cursive;">
-                					<span class="card-kh">ក្រុមប្រឹក្សាស្ដារវិស័យកសិកម្ម និង អភិវឌ្ឍន៍ជនបទ</span><br>
-                					<span class="card-en">Council of Agriculture and Rural Development</span>
-                				</h2>
-                				<h3 style="font-family: 'Freehand', cursive;">
-                					<span class="ncovop-kh">គណៈកម្មាធិការជាតិជំរុញចលនា ភូមិ១ផលិតផល១</span><br>
-                					<span class="ncovop-en">National Committee of One Village One Product Movement</span>
-                				</h3>
-        					</div>
-        					<div class="col-md-2 text-center">
-        						<img alt="ovop logo" src="<?= $this->basePath('/img/ovop-logo.png');?>" style="size: 100%; height: 130px;">
-        					</div>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="row"
-    		style="background-color: #5cb85c; padding-top: 20px; padding-bottom: 20px; margin-left: 0px; margin-right: 0px;">
-
+    	<div class="page-header">
+    		<div class="container">
+    			<div class="row">
+            		<!-- Page header -->
+					<div class="col-md-2 text-left">
+						<img alt="moc logo" src="<?= $this->basePath('/img/moc-logo.png'); ?>" style="size: 100%; height: 130px;">
+					</div>
+					<div class="col-md-8 text-center">
+						<h2 style="font-family: 'Moul', cursive;">
+        					<span class="card-kh">ក្រុមប្រឹក្សាស្ដារវិស័យកសិកម្ម និង អភិវឌ្ឍន៍ជនបទ</span><br>
+        					<span class="card-en">Council of Agriculture and Rural Development</span>
+        				</h2>
+        				<h3 style="font-family: 'Freehand', cursive;">
+        					<span class="ncovop-kh">គណៈកម្មាធិការជាតិជំរុញចលនា ភូមិ១ផលិតផល១</span><br>
+        					<span class="ncovop-en">National Committee of One Village One Product Movement</span>
+        				</h3>
+					</div>
+					<div class="col-md-2 text-right">
+						<img alt="ovop logo" src="<?= $this->basePath('/img/ovop-logo.png');?>" style="size: 100%; height: 130px;">
+					</div>
+            	</div>
     		</div>
-            <!-- <div class="row"> -->
-                <!-- Page header -->
-                <!-- <div class="col-md-12">
-                    <div class="app-caption">User Role</div>
-                </div>
-            </div> -->
+    	</div>
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <!-- Navigation bar -->
