--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -33,20 +33,20 @@
     			<div class="row">
             		<!-- Page header -->
 					<div class="col-md-2 text-left">
-						<img alt="moc logo" src="<?= $this->basePath('/img/moc-logo.png'); ?>" style="size: 100%; height: 130px;">
+						<img class="moc-logo" alt="moc logo" src="<?= $this->basePath('/img/moc-logo.png'); ?>">
 					</div>
 					<div class="col-md-8 text-center">
-						<h2 style="font-family: 'Moul', cursive;">
+						<h2 class="card">
         					<span class="card-kh">ក្រុមប្រឹក្សាស្ដារវិស័យកសិកម្ម និង អភិវឌ្ឍន៍ជនបទ</span><br>
         					<span class="card-en">Council of Agriculture and Rural Development</span>
         				</h2>
-        				<h3 style="font-family: 'Freehand', cursive;">
+						<h3 class="ncovop">
         					<span class="ncovop-kh">គណៈកម្មាធិការជាតិជំរុញចលនា ភូមិ១ផលិតផល១</span><br>
         					<span class="ncovop-en">National Committee of One Village One Product Movement</span>
         				</h3>
 					</div>
 					<div class="col-md-2 text-right">
-						<img alt="ovop logo" src="<?= $this->basePath('/img/ovop-logo.png');?>" style="size: 100%; height: 130px;">
+						<img class="ovop-logo" alt="ovop logo" src="<?= $this->basePath('/img/ovop-logo.png');?>">
 					</div>
             	</div>
     		</div>
@@ -80,9 +80,16 @@
                 </div>
             </div>
             <hr>
-            <footer>
-                <p>&copy; 2017 - <?= date('Y') ?> The One Village One Product Movement of Cambodia. All rights reserved.</p>
-            </footer>
+            <!-- <footer>
+                <p>Copyright &copy; <?// = date('Y') ?> &nbsp; The One Village One Product Movement of Cambodia. All rights reserved.</p>
+            </footer> -->
+        </div>
+        <div class="page-footer">
+        	<div class="container">
+        		<footer>
+                    <p>Copyright &copy; <?= date('Y') ?> &nbsp; The One Village One Product Movement of Cambodia. All rights reserved.</p>
+                </footer>
+        	</div>
         </div>
         <?= $this->inlineScript() ?>
     </body>
