Add @media (min-width, min-height) on page body

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -51,38 +51,40 @@
             	</div>
     		</div>
     	</div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <!-- Navigation bar -->
-                    <?php
-                    // Check if the activeMenuItemId passed to layout view model
-                    // and if so, use it for setting active navbar item.
-                    if (isset($activeMenuItemId)) {
-                        $this->mainMenu()->setActiveItemId($activeMenuItemId);
-                    }
+        <div class="page-body">
+        	<div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- Navigation bar -->
+                        <?php
+                        // Check if the activeMenuItemId passed to layout view model
+                        // and if so, use it for setting active navbar item.
+                        if (isset($activeMenuItemId)) {
+                            $this->mainMenu()->setActiveItemId($activeMenuItemId);
+                        }
 
-                    // Render the navbar
-                    echo $this->mainMenu()->render();
-                    ?>
+                        // Render the navbar
+                        echo $this->mainMenu()->render();
+                        ?>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <!-- Breadcrumbs -->
-                    <?= $this->pageBreadcrumbs()->render(); ?>
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- Breadcrumbs -->
+                        <?= $this->pageBreadcrumbs()->render(); ?>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <!-- Page content placeholder -->
-                    <?= $this->content; ?>
+                <div class="row">
+                    <div class="col-md-12">
+                        <!-- Page content placeholder -->
+                        <?= $this->content; ?>
+                    </div>
                 </div>
+                <hr>
+                <!-- <footer>
+                    <p>Copyright &copy; <?// = date('Y') ?> &nbsp; The One Village One Product Movement of Cambodia. All rights reserved.</p>
+                </footer> -->
             </div>
-            <hr>
-            <!-- <footer>
-                <p>Copyright &copy; <?// = date('Y') ?> &nbsp; The One Village One Product Movement of Cambodia. All rights reserved.</p>
-            </footer> -->
         </div>
         <div class="page-footer">
         	<div class="container">
