new branch - dev

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -19,7 +19,7 @@ $this->pageBreadcrumbs()->setItems([
 <p>
 	Click the <em>Sign in</em> button at the top right. To sign in, use the following credentials:
     <ul>
-        <li>Username: <em>admin@resolvo.com</em></li>
-        <li>Password: <em>Pass@Word001</em></li>
+        <li>Username: <em>jedipann@gmail.com</em></li>
+        <li>Password: <em>password010</em></li>
     </ul>
 </p>
