--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -4,39 +4,43 @@ $this->headTitle('Sign in');
 $this->mainMenu()->setActiveItemId('login');
 
 $form->get('email')->setAttributes([
-    'class'=>'form-control', 
+    'class'=>'form-control',
     'placeholder'=>'Email address',
     'required' => true,
     'autofocus' => true
     ])
-    ->setLabelAttributes([
+    /* ->setLabelAttributes([
         'class' => 'sr-only'
-    ]);
+    ]) */;
 
 $form->get('password')->setAttributes([
-    'class'=>'form-control', 
+    'class'=>'form-control',
     'placeholder'=>'Password',
     'required' => true,
     ])
-    ->setLabelAttributes([
+    /* ->setLabelAttributes([
         'class' => 'sr-only'
-    ]);
+    ]) */;
 ?>
 
 <div class="row">
     <div class="col-md-offset-4 col-md-3">
         <form class="form-signin" method="post">
-            <h2 class="form-signin-heading">Please sign in</h2>
+            <h2 class="form-signin-heading text-center">Please Sign In</h2>
             <?php if ($isLoginError): ?>
             <div class="alert alert-warning" role="alert">
-                Incorrect login and/or password. 
+                Incorrect email address and/or password.
                 <a href="<?= $this->url('reset-password') ?>">Forgot password?</a>
             </div>
             <?php endif; ?>
-            <?= $this->formLabel($form->get('email')); ?>
-            <?= $this->formElement($form->get('email')); ?>
-            <?= $this->formLabel($form->get('password')); ?>
-            <?= $this->formElement($form->get('password')); ?>
+            <div class="text">
+            	<?= $this->formLabel($form->get('email')); ?>
+            	<?= $this->formElement($form->get('email')); ?>
+            </div>
+            <div class="text">
+            	<?= $this->formLabel($form->get('password')); ?>
+            	<?= $this->formElement($form->get('password')); ?>
+            </div>
             <div class="checkbox">
                 <label>
                     <?= $this->formElement($form->get('remember_me')); ?> Remember me
@@ -44,7 +48,7 @@ $form->get('password')->setAttributes([
             </div>
             <?= $this->formElement($form->get('redirect_url')); ?>
             <?= $this->formElement($form->get('csrf')) ?>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <button class="btn btn-primary btn-block" type="submit">Sign in</button>
         </form>
     </div>
 </div>
