add user policy

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -11,13 +11,15 @@ $this->pageBreadcrumbs()->setItems([
 <h1>Welcome</h1>
 
 <p>
-    This is the user role of ovop project application powered by Zend Framework 3.
-    It is based on User RBAC, developed by Resolvo-dev.
-    It demonstrates how to implement role-based access control.
+    to <b>o</b>ne <b>v</b>illage <b>o</b>ne <b>p</b>roduct movement of Cambodia (OVOP-Cambo).
+    You'll find plenty of products of Cambodia which provided usefull information and services,
+    plus user control by creating a free account. <br><br>
+    Find out more on <a href="<?= $this->url('application', ['action'=>'setting'])?>">user policy.</a>
 </p>
-
+<br><br>
 <p>
-	Click the <em>Sign in</em> button at the top right. To sign in, use the following credentials:
+	<strong>Hint:</strong> not yet have an account, simply <a href="<?= $this->url('login', ['action'=>'login'])?>">create one</a>
+	or use the following credentials to sign in by clicking the <em>Sign in</em> button at the top right.
     <ul>
         <li>Username: <em>jedipann@gmail.com</em></li>
         <li>Password: <em>password010</em></li>
