--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ form ul li {
 }
 
 @media (min-width: 768px) {
-	.navbar-left {
+	.nav.navbar-left {
 		margin-left: -15px;
 	}
 	.page-body {
@@ -107,6 +107,14 @@ form ul li {
 	font-size: 20px;
 }
 
+/* highmaps */
+#highmaps {
+	min-width: 300px;
+	min-height: 500px;
+	max-width: 950px;
+	margin: 0 auto;
+}
+
 /* login page */
 .text {
 	margin-bottom: 10px;
@@ -114,6 +122,7 @@ form ul li {
 
 ul.footer-top-link {
 	padding: 0px;
+	margin-bottom: 30px;
 }
 ul.footer-top-link li {
 	padding-right: 15px;
