--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -26,7 +26,7 @@ $form->get('password')->setAttributes([
 <div class="row">
     <div class="col-md-offset-4 col-md-3">
         <form class="form-signin" method="post">
-            <h2 class="form-signin-heading text-center">Please Sign In</h2>
+            <h2 class="form-signin-heading text-center">Sign In</h2>
             <?php if ($isLoginError): ?>
             <div class="alert alert-warning" role="alert">
                 Incorrect email address and/or password.
