add user registration form

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -17,7 +17,7 @@ $this->pageBreadcrumbs()->setItems([
         plus a user access control by creating a free account.
     </p>
     <p>
-        Find out more on <a href="<?= $this->url('privacy', ['action'=>'privacy'])?>">user policy.</a>
+        Find out more on <a href="<?= $this->url('privacy')?>">user policy.</a>
     </p>
 </div>
 
@@ -33,8 +33,8 @@ $this->pageBreadcrumbs()->setItems([
 
 				<br><br>
 
-				<i class="glyphicon glyphicon-star-empty"></i> Please read our <a href="<?= $this->url('privacy', ['action'=>'privacy']) ?>">privacy policy</a>
-				and the <a <?= $this->url('terms', ['action'=>'terms']) ?>>terms of use</a> in every aspect in this OVOP website.
+				<i class="glyphicon glyphicon-star-empty"></i> Please read our <a href="<?= $this->url('privacy') ?>">privacy policy</a>
+				and the <a href="<?= $this->url('terms') ?>">terms of use</a> in every aspect in this OVOP website.
 
 				<br><br>
 
@@ -49,7 +49,7 @@ $this->pageBreadcrumbs()->setItems([
 			</div>
 			<div class="panel-body">
 				<i class="glyphicon glyphicon-thumbs-up"></i> Not yet have an account,
-				simply <a href="<?= $this->url('login', ['action'=>'login'])?>">create one</a>
+				simply <a href="<?= $this->url('register')?>">create one</a>
             	or use the following credentials to sign in by clicking the <b><em>Sign in</em></b> button at the top right.
 
                 <br><br>
