--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -6,7 +6,7 @@ $this->mainMenu()->setActiveItemId('login');
 $form->get('email')->setAttributes([
     'class'=>'form-control',
     'placeholder'=>'Email address',
-    'required' => true,
+    // 'required' => true,
     'autofocus' => true
     ])
     /* ->setLabelAttributes([
@@ -16,7 +16,7 @@ $form->get('email')->setAttributes([
 $form->get('password')->setAttributes([
     'class'=>'form-control',
     'placeholder'=>'Password',
-    'required' => true,
+    // 'required' => true,
     ])
     /* ->setLabelAttributes([
         'class' => 'sr-only'
@@ -24,31 +24,43 @@ $form->get('password')->setAttributes([
 ?>
 
 <div class="row">
-    <div class="col-md-offset-4 col-md-3">
+    <div class="col-md-offset-4 col-md-4">
         <form class="form-signin" method="post">
+
             <h2 class="form-signin-heading text-center">Sign In</h2>
+
             <?php if ($isLoginError): ?>
             <div class="alert alert-warning" role="alert">
-                Incorrect email address and/or password.
+                Incorrect an email address and/or password. <br>
                 <a href="<?= $this->url('reset-password') ?>">Forgot password?</a>
             </div>
             <?php endif; ?>
-            <div class="text">
+
+            <div class="zend-form">
             	<?= $this->formLabel($form->get('email')); ?>
             	<?= $this->formElement($form->get('email')); ?>
+            	<?= $this->formelementerrors($form->get('email')); ?>
             </div>
-            <div class="text">
+            <div class="zend-form">
             	<?= $this->formLabel($form->get('password')); ?>
             	<?= $this->formElement($form->get('password')); ?>
+            	<?= $this->formelementerrors($form->get('password')); ?>
             </div>
-            <div class="checkbox">
-                <label>
-                    <?= $this->formElement($form->get('remember_me')); ?> Remember me
-                </label>
+            <div class="zend-form">
+                <?= $this->formElement($form->get('remember_me')); ?> Remember me
             </div>
-            <?= $this->formElement($form->get('redirect_url')); ?>
-            <?= $this->formElement($form->get('csrf')) ?>
+            <div class="zend-form">
+            	<?= $this->formElement($form->get('redirect_url')); ?>
+            </div>
+            <div class="zend-form">
+            	<?= $this->formElement($form->get('csrf')) ?>
+            </div>
             <button class="btn btn-primary btn-block" type="submit">Sign in</button>
+
+        	<hr>
+
+            <p>Don't have an account? <a href="<?= $this->url('register') ?>">Sign up</a></p>
+
         </form>
     </div>
 </div>
