--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -16,7 +16,7 @@
 
         <!-- Le styles -->
         <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/ovop.png'])
-                        ->prependStylesheet($this->basepath('highmaps/css/highcharts.css'))
+                        // ->prependStylesheet($this->basepath('highmaps/css/highcharts.css'))
                         ->prependStylesheet($this->basePath('css/bootstrap-theme.min.css'))
                         ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
                         ->prependStylesheet($this->basePath('css/style.css'))
@@ -24,8 +24,8 @@
 
         <!-- Scripts -->
         <?= $this->headScript()
-            ->prependFile($this->basepath('highmaps/countries/kh/kh-all.js'))
-            ->prependFile($this->basepath('highmaps/js/highmaps.js'))
+            // ->prependFile($this->basepath('highmaps/countries/kh/kh-all.js'))
+            // ->prependFile($this->basepath('highmaps/js/highmaps.js'))
             ->prependFile($this->basePath('js/bootstrap.min.js'))
             ->prependFile($this->basePath('js/jquery-2.2.4.min.js'))
             ->prependFile($this->basepath('js/script.js'))
