--- a/module/User/view/user/auth/login.phtml
+++ b/module/User/view/user/auth/login.phtml
@@ -31,7 +31,7 @@ $form->get('password')->setAttributes([
 
             <?php if ($isLoginError): ?>
             <div class="alert alert-warning" role="alert">
-                Incorrect an email address and/or password. <br>
+                Incorrect an email address and/or password.
                 <a href="<?= $this->url('reset-password') ?>">Forgot password?</a>
             </div>
             <?php endif; ?>
